EmbeddedImplClassLoader cleanup